--- a/src/style/gamePanel.css
+++ b/src/style/gamePanel.css
@@ -3,12 +3,12 @@
     gap: 20px;
     display: flex;
     height: 100%;
-    padding: 20px;
     margin-top: 20px;
+    padding: 20px 10px;
     border-radius: 20px;
     flex-direction: column;
-    color: var(--light-color);  
-    background-color:  transparent;
+    color: var(--light-color);
+    background-color: transparent;
   }
 
   .game-bar {
@@ -20,38 +20,53 @@
   .game-filter {
     gap: 10px;
     display: flex;
-    max-width:50%;
+    max-width: 60%;
+    cursor: pointer;
     overflow: hidden;
-    overflow-y: auto; 
+    overflow-y: auto;
     overflow-x: auto;
-    
   }
 
   .filter {
     display: flex;
     font-size: .8rem;
-    padding: 5px 15px;
+    padding: 8px 15px;
     border-radius: 8px;
     align-items: center;
     justify-content: center;
-    background-color:  var(--dark-primary-color);
-
+    background-color: var(--dark-primary-color);
   }
 
   .filter:hover {
-    color: var( --background-color);
-    background-color:  var(--dark-primary-color);
+    color: var(--background-color);
+    background-color: var(--secondary-color);
+  }
 
+  .active-f {
+    color: var(--background-color);
+    background-color: var(--secondary-color);
+  }
+
+  .calender {
+    display: flex;
+    border-radius: 8px;
+    align-items: center;
+    background-color: var(--primary-color);
   }
 
   .date-filter {
     border: none;
     outline: none;
-    padding: 10px;
-    border-radius:  8px;
-    color: var(--light-color);  
-    background-color:  var(--dark-primary-color);
+    padding: 8px;
+    border-radius: 8px;
+    color: var(--light-color);
+    background-color: var(--dark-primary-color);
+  }
 
+  .date-f-icon {
+    width: 20px;
+    height: 20px;
+    fill: var(--light-color);
   }
 
   .game-controller {
@@ -64,8 +79,19 @@
     flex-direction: row;
   }
 
+  .game-prediction {
+    gap: 20px;
+    width: 100%;
+    display: flex;
+    overflow: hidden;
+    overflow-x: auto;
+    overflow-y: auto;
+    flex-direction: row;
+  }
+
   .game-inner {
     gap: 10px;
+    width:100%;
     display: flex;
     padding: 10px;
     cursor: pointer;
@@ -73,15 +99,23 @@
     border-radius: 8px;
     flex-direction: column;
     justify-content: space-between;
-    background-color:  var(--dark-primary-color);
-
+    background-color: var(--dark-primary-color);
   }
 
   .game-time {
+    gap: 15px;
     display: flex;
-    align-items: end;
-    flex-direction: column;
-    color: var( --secondary-color);
+    padding: 5px 10px;
+    justify-content: space-between;
+    color: var(--secondary-color);
+  }
+
+  .game-time h1 {
+    font-size: .8rem;
+  }
+  .game-like-icon {
+    fill: var(--secondary-color);
+    height: 16px;
   }
 
   .game-details {
@@ -91,7 +125,6 @@
     flex-grow: 100%;
     align-items: center;
     justify-content: space-between;
-
   }
 
   .game {
@@ -101,9 +134,25 @@
     flex-direction: column;
     justify-content: center;
   }
-  
-  .game  span {
+
+  .game span {
+    font-size: .8rem;
     display: none;
+  }
+  
+  
+  .g-p {
+    gap: 20px;
+    width: 100%;
+    display: flex;
+    padding: 10px 0;
+    flex-direction: column;
+  }
+
+  .g-pan {
+    width:100%;
+    display: flex;
+    justify-content: space-between;
   }
 
   .game-img {
@@ -111,132 +160,115 @@
     background-position: center;
     background-size: cover;
     border-radius: 360%;
-    height:50px;
-    width:50px;
+    height: 50px;
+    width: 50px;
+  }
+
+  .game-score {
+    font-size: .8rem;
+    padding: 2px 20px;
+    border-radius: 4px;
+    color: var(--secondary-color);
+  }
+
+  .game-score h3 {
+    font-size: .8rem;
+    font-weight: 300;
+  }
+
+  .prediction-pan {
+    display: flex;
+    border-radius: 4px;
+    padding:  10px 20px;
+    justify-content: space-between;
+    background-color: var(--primary-color);
+
+  }
+
+  .pp-score span {
+    font-size: .8rem;
+    font-weight: 600;
+    color: var(--secondary-color);
+  }
+
+  .dott-s {
+    font-size: .8rem;
+    font-weight: 600;
+    color: var(--secondary-color);
 
   }
   
-  .game-score {
-    font-size: 1.4rem;
-    padding: 2px 20px;
-    border-radius: 20px;
-    color: var( --secondary-color);
-
-  }
+  
 }
 /* using it as global style for larger devices  */
 @media only screen and (min-width: 48em) {
   .game-container {
-    gap: 20px;
-    display: flex;
-    height: 100%;
-    padding: 20px;
-    margin-top: 20px;
-    border-radius: 20px;
-    flex-direction: column;
-    color: var(--light-color);  
-    background-color:  var(--dark-primary-color);
-  }
-
-  .game-bar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-
-  .game-filter {
-    gap: 10px;
-    display: flex;
-    max-width:50%;
-    overflow: hidden;
-    overflow-y: auto; 
-    overflow-x: auto;
+    background-color: var(--dark-primary-color);
   }
 
   .filter {
-    display: flex;
-    font-size: .8rem;
-    padding: 5px 15px;
-    border-radius: 8px;
-    align-items: center;
-    justify-content: center;
-    background-color:var(--primary-color);
+    background-color: var(--primary-color);
   }
 
   .filter:hover {
-    color: var( --background-color);
     background-color: var(--secondary-color);
   }
 
   .date-filter {
-    border: none;
-    outline: none;
-    padding: 10px;
-    border-radius:  8px;
-    color: var(--light-color);  
-    background-color:var(--primary-color);
+    background-color: var(--primary-color);
   }
 
   .game-controller {
-    gap: 20px;
-    display: flex;
     max-height: 52%;
-    overflow: hidden;
     overflow-y: hidden;
     overflow-x: hidden;
     flex-direction: column;
   }
 
+  .game-prediction {
+    max-height: 52%;
+    overflow-y: hidden;
+    overflow-x: hidden;
+    flex-direction: column;
+   }
+
   .game-inner {
-    display: flex;
-    padding: 10px;
-    cursor: pointer;
-    border-radius: 8px;
     align-items: center;
     flex-direction: row;
-    justify-content: space-between;
     border: 1px solid var(--light-color);
   }
 
-  .game-time {
-    color: var( --secondary-color);
+  
+  .active-f {
+    color: var(--background-color);
+    background-color: var(--secondary-color);
   }
 
   .game-details {
     width: 80%;
-    display: flex;
-    flex-grow: 100%;
-    align-items: center;
-    justify-content: space-between;
-
   }
+
+  .game-time {
+    padding: 0;
+  }
+
 
   .game {
-    gap: 10px;
-    display: flex;
-    align-items: center;
     flex-direction: row;
-    justify-content: center;
   }
 
-  .game  span {
+  .game span {
     display: contents;
   }
-  .game-img {
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    border-radius: 360%;
-    height:30px;
-    width:30px;
 
+  .game-img {
+    height: 30px;
+    width: 30px;
   }
-  
+
   .game-score {
-    font-size: 1rem;
-    padding: 2px 20px;
-    border-radius: 20px;
-    color: var( --secondary-color);
-    background-color:var(--primary-color);
+        background-color: var(--primary-color);
   }
+
+
 }
