--- a/src/style/league.css
+++ b/src/style/league.css
@@ -27,13 +27,13 @@
   }
 
   .league-header h1 {
-    font-size: 1rem;
+    font-size: .8rem;
     text-transform: capitalize;
     color: var(--background-color);
   }
 
   .league-header span {
-    font-size: 1rem;
+    font-size: .8rem;
     cursor: pointer;
   }
 
@@ -102,13 +102,12 @@
 
   .l-items-container span {
     display: contents;
-    font-size: 1rem;
+    font-size: .8rem;
     text-transform: capitalize;
   }
   .l-items-list {
     padding: 0 20px;
     max-height: 430px;
-    overflow: hidden;
     overflow-y: auto;
     align-items: start;
     overflow-x: hidden;
