--- a/src/style/news.css
+++ b/src/style/news.css
@@ -11,7 +11,7 @@
  }
 
  .news-header h1 {
-  font-size: 1.2rem;
+  font-size: 1rem;
  }
 
  .news-banner {
@@ -31,7 +31,7 @@
  }
 
  .banner-info h1 {
-  font-size: 1rem;
+  font-size: .9rem;
 }
 
 .banner-info span {
