--- a/src/style/adPanel.css
+++ b/src/style/adPanel.css
@@ -11,9 +11,9 @@
   }
 
   .ad-info {
-    gap: 10px;
+    gap: 5px;
     flex: 50%;
-    padding: 20px;
+    padding:5px 20px;
     display: flex;
     flex-direction: column;
   }
