--- a/src/style/gamePanel.css
+++ b/src/style/gamePanel.css
@@ -4,7 +4,7 @@
     display: flex;
     height: 100%;
     margin-top: 20px;
-    padding: 20px 10px;
+    padding: 20px 15px;
     border-radius: 20px;
     flex-direction: column;
     color: var(--light-color);
@@ -111,7 +111,7 @@
   }
 
   .game-time h1 {
-    font-size: .8rem;
+    font-size: 1rem;
   }
   .game-like-icon {
     fill: var(--secondary-color);
@@ -136,7 +136,7 @@
   }
 
   .game span {
-    font-size: .8rem;
+    font-size: 1rem;
     display: none;
   }
   
@@ -175,7 +175,7 @@
   }
 
   .game-score h3 {
-    font-size: .8rem;
+    font-size: 1rem;
     font-weight: 300;
   }
 
@@ -195,7 +195,7 @@
   }
 
   .dott-s {
-    font-size: .8rem;
+    font-size: 1rem;
     font-weight: 600;
     color: var(--secondary-color);
 
@@ -241,6 +241,9 @@
     border: 1px solid var(--light-color);
   }
 
+  .pp-score span {
+    font-size: .9rem;
+  }
   
   .active-f {
     color: var(--background-color);
@@ -249,6 +252,10 @@
 
   .game-details {
     width: 80%;
+  }
+
+  .dott-s {
+    font-size: .8rem;
   }
 
   .game-time {
@@ -261,6 +268,7 @@
   }
 
   .game span {
+      font-size: .8rem;
     display: contents;
   }
 
@@ -273,5 +281,12 @@
         background-color: var(--primary-color);
   }
 
+  .game-time h1 {
+    font-size: .8rem;
+  }
+
+  .game-score h3 {
+    font-size: .8rem;
+  }
 
 }
