--- a/src/style/news.css
+++ b/src/style/news.css
@@ -2,7 +2,7 @@
  .news-component {
   gap: 10px;
   height: 100%;
-  padding: 10px;
+  padding: 10px 15px;
   display: flex;
   text-transform: capitalize;
 
