--- a/src/style/adPanel.css
+++ b/src/style/adPanel.css
@@ -13,8 +13,8 @@
   .ad-info {
     gap: 5px;
     flex: 50%;
-    padding:5px 20px;
     display: flex;
+    padding:5px 20px;
     flex-direction: column;
   }
 
@@ -22,7 +22,7 @@
     font-size: 1.5rem;
   }
 
-  .ad-btn {
+  .ads-btn {
     width: 50%;
     padding: 10px;
     font-size: .8rem;
