--- a/src/style/home.css
+++ b/src/style/home.css
@@ -7,6 +7,11 @@
 
   .home-container {
     height: 100%;
+ 
+  }
+
+  .news-layout {
+    padding-bottom: 100px;
   }
 
 
@@ -52,6 +57,7 @@
     flex: 25%;
     overflow-y: auto;
     overflow: hidden;
+    padding-bottom: 0;
     border-radius:20px;
     overflow-x: hidden;
     background-color:  var(--dark-primary-color);
