--- a/src/style/mobileNav.css
+++ b/src/style/mobileNav.css
@@ -1,10 +1,9 @@
 @media screen {
   .mobile-container {
     width: 95%;
-    bottom: 0;
+    bottom: 10px;
     display: flex;
-    margin: 10px 0;
-    position: relative;
+    position: fixed;
     padding: 15px 20px;
     border-radius: 50px;
     align-items: center;
