--- a/src/style/profileCard.css
+++ b/src/style/profileCard.css
@@ -1,10 +1,11 @@
 @media screen {
   .profile-card-i {
     height: 100%;
+    padding-bottom: 30%;
   }
 
   .profile-img-i {
-    height: 100%;
+    height: 300px;
     display: flex;
     background-size: cover;
     background-repeat: no-repeat;
@@ -76,7 +77,9 @@
   .profile-card-i {
     gap: 10px;
     display: flex;
+    padding-bottom: 0;
     flex-direction: column;
+
   }
 
   .profile-img-i {
