--- a/src/style/global.css
+++ b/src/style/global.css
@@ -10,7 +10,7 @@
     --background-color: #ffffff;
     --dark-primary-color: #06274a;
     --light-primary-color: #113356;
-    --drop-shadow: 5px 8px 9px var(--tertiary-colo);
+    --drop-shadow: 5px 8px 9px var(--tertiary-color);
 
     margin: 0;
     padding: 0;
@@ -24,11 +24,6 @@
     background-color: var(--primary-color);
     transition: background-color 0.2s ease, color 0.2s ease;
   }
-
-  /* body.light-theme {
-    background-color: var(--background-color);
-    color:  var(--primary-color);
-  } */
 
 
   h1, h2 {
@@ -57,6 +52,18 @@
 
   .desk-show {
     display: none;
+  }
+
+  select {
+    outline: none;
+  }
+
+  .select:hover {
+    outline: none;
+
+  }
+  .select:focus {
+    outline: none;
   }
 
 
